--- a/dbt/packages.yml
+++ b/dbt/packages.yml
@@ -1,3 +1,5 @@
 packages:
   - git: "https://github.com/dbt-labs/dbt-utils"
     revision: 1.1.1
+  - git: "https://github.com/calogica/dbt-expectations"
+    revision: 0.10.3
